weave-secret-ingress/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    labels:
        app: frontend
    name: frontend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
            - image: mohammad67/simple-api-weave:v1.0
              imagePullPolicy: IfNotPresent
              name: frontend
