weave-secret-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
    rules:
    - http:
        paths:
        - path: /api
          pathType: Exact
          backend:
            service:
              name: frontend-svc
              port: 
                number: 3000
        - path: /
          pathType: Exact
          backend:
            service:
              name: static-svc
              port: 
                number: 80
